1.8.3/_sources/arcgis.geometry.rst.txt
arcgis.geometry module
======================

.. automodule:: arcgis.geometry

Point
--------------
.. autoclass:: arcgis.geometry.Point
    :members:
    :undoc-members:

MultiPoint
--------------
.. autoclass:: arcgis.geometry.MultiPoint
    :members:
    :undoc-members:

Polyline
--------------
.. autoclass:: arcgis.geometry.Polyline
    :members:
    :undoc-members:

Polygon
--------------
.. autoclass:: arcgis.geometry.Polygon
    :members:
    :undoc-members:

Envelope
--------------
.. autoclass:: arcgis.geometry.Envelope
    :members:
    :undoc-members:

SpatialReference
--------------
.. autoclass:: arcgis.geometry.SpatialReference
    :members:
    :undoc-members:

Geometry
--------------
.. autoclass:: arcgis.geometry.Geometry
    :members:
    :undoc-members:

areas_and_lengths
--------------
.. autofunction:: arcgis.geometry.areas_and_lengths

auto_complete
--------------
.. autofunction:: arcgis.geometry.auto_complete

buffer
--------------
.. autofunction:: arcgis.geometry.buffer

convex_hull
--------------
.. autofunction:: arcgis.geometry.convex_hull

cut
--------------
.. autofunction:: arcgis.geometry.cut

densify
--------------
.. autofunction:: arcgis.geometry.densify

difference
--------------
.. autofunction:: arcgis.geometry.difference

distance
--------------
.. autofunction:: arcgis.geometry.distance

find_transformation
--------------
.. autofunction:: arcgis.geometry.find_transformation

from_geo_coordinate_string
--------------
.. autofunction:: arcgis.geometry.from_geo_coordinate_string

generalize
--------------
.. autofunction:: arcgis.geometry.generalize

intersect
--------------
.. autofunction:: arcgis.geometry.intersect

label_points
--------------
.. autofunction:: arcgis.geometry.label_points

lengths
--------------
.. autofunction:: arcgis.geometry.lengths

offset
--------------
.. autofunction:: arcgis.geometry.offset

project
--------------
.. autofunction:: arcgis.geometry.project


relation
--------------
.. autofunction:: arcgis.geometry.relation


reshape
--------------
.. autofunction:: arcgis.geometry.reshape


to_geo_coordinate_string
--------------
.. autofunction:: arcgis.geometry.to_geo_coordinate_string


trim_extend
--------------
.. autofunction:: arcgis.geometry.trim_extend


union
--------------
.. autofunction:: arcgis.geometry.union


Submodules
--------------
.. toctree::
   :maxdepth: 3

   arcgis.geometry.filters
   arcgis.geometry.functions
